--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
     "build": "echo 'No build step required'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["youtube", "notes", "timestamps", "web-app"],
+  "keywords": [
+    "youtube",
+    "notes",
+    "timestamps",
+    "web-app"
+  ],
   "author": "Nghia Trung Ngo",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.56.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "pg": "^8.11.3",
-    "@supabase/supabase-js": "^2.38.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
